add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User's dasboard</title>
+    <title>Dashborad</title>
 
     <!--css-->
     <link rel="stylesheet" href="asset/css/style.css">
@@ -24,9 +24,6 @@
 
 <body>
 
-    <!-- Css of this page is located in asset/css/product.ss -->
-
-    <!-- Dashboard user -->
     <section class="user-dashboard">
         <div class="dashboard">
             <div class="left-side">
@@ -35,7 +32,7 @@
                         <i class="bi bi-clipboard-pulse"></i>
                         <span>Dashboard</span>
                     </a>
-                    <a href="#">
+                    <a href="profil.html">
                         <i class="bi bi-person-check"></i>
                         <span>My profile</span>
                     </a>
@@ -50,92 +47,7 @@
                 </nav>
             </div>
         </div>
-        <div class="right-side">
-            <div class="top-profil">
-                <span>Anicet chiza</span>
-                <div>
-                    <p class="profil-pic"><img src="asset/images/profil.jpg" alt=""></p>
-                    <div class="online"></div>
-                </div>
-            </div>
-
-            <div class="profil-details">
-                <div class="categories-list">
-                    <ul>
-                        <li class="active" data-filter="men-shoes">My profile</li>
-                        <li data-filter="wemen">Change profile</li>
-                    </ul>
-                </div>
-
-                <div class="myprofil shoes-item men-shoes">
-                    <div class="myprofil-details">
-                        <div class="profil-intro">
-                            <h3>My profile</h3>
-                            <p><img src="asset/images/profil.jpg" alt=""></p>
-                        </div>
-                        <div class="all-info">
-                            <div>
-                                <i class="bi bi-person-circle"></i>
-                                <p>First name:</p>
-                                <span>Anicet</span>
-                            </div>
-                            <div>
-                                <i class="bi bi-person-circle"></i>
-                                <p>Last name:</p>
-                                <span>Chiza</span>
-                            </div>
-                            <div>
-                                <i class="bi bi-envelope"></i>
-                                <p>Email:</p>
-                                <span>carlosndai@gmail.com</span>
-                            </div>
-                            <div>
-                                <i class="bi bi-telephone"></i>
-                                <p>Phone number:</p>
-                                <span>+250 123456789</span>
-                            </div>
-                            <div>
-                                <i class="bi bi-flag"></i>
-                                <p>Country:</p>
-                                <span>Rwanda</span>
-                            </div>
-                            <div>
-                                <i class="bi bi-app-indicator"></i>
-                                <p>City:</p>
-                                <span>Kigali</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="shoes-item wemen">
-                    <div class="myprofil-details profil-item">
-                        <h3 style="margin-top: 20px; text-align:center;">Change my profil</h3>
-                        <form action="">
-                            <div>
-                                <input type="text" placeholder="First name">
-                                <input type="text" placeholder="Second name">
-                                <input type="email" placeholder="Your email">
-                                <input type="number" placeholder="Your phone number">
-                                <input type="text" placeholder="Your country">
-                                <input type="text" placeholder="First city">
-                                <input type="File">
-                            </div>
-                            <div class="sub">
-                                <input type="submit" value="Change profil">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
     </section>
-
-
-    <script src="asset/javascript/app.js"></script>
-
 
 </body>
 
