add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -47,6 +47,16 @@
                 </nav>
             </div>
         </div>
+
+        <div class="right-side">
+            <div class="top-profil">
+                <span>Anicet chiza</span>
+                <div>
+                    <p class="profil-pic"><img src="asset/images/profil.jpg" alt=""></p>
+                    <div class="online"></div>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
