add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -56,8 +56,28 @@
                     <div class="online"></div>
                 </div>
             </div>
+
+            <div class="order-container">
+                <div class="order-prod">
+                    <p><img src="asset/images/bg-1.jpg" alt=""></p>
+                    <div class="size">
+                        <div class="custom-dropdown">
+                            <button class="dropdown-btn" id="color-btn">Select Colors</button>
+                            <div class="dropdown-content">
+                                <label><input type="checkbox" value="red"> Red</label>
+                                <label><input type="checkbox" value="blue"> Blue</label>
+                                <label><input type="checkbox" value="green"> Green</label>
+                                <label><input type="checkbox" value="black"> Black</label>
+                                <label><input type="checkbox" value="white"> White</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+
+    <script src="asset/javascript/prod.js"></script>
 
 </body>
 
