--- a/dashboard.html
+++ b/dashboard.html
@@ -24,6 +24,7 @@
 
 <body>
 
+    <!-- The css of this page will be located in product.css -->
     <section class="user-dashboard">
         <div class="dashboard">
             <div class="left-side">
@@ -58,19 +59,44 @@
             </div>
 
             <div class="order-container">
+                <h3>Products ordered</h3>
                 <div class="order-prod">
                     <p><img src="asset/images/bg-1.jpg" alt=""></p>
-                    <div class="size">
-                        <div class="custom-dropdown">
-                            <button class="dropdown-btn" id="color-btn">Select Colors</button>
-                            <div class="dropdown-content">
-                                <label><input type="checkbox" value="red"> Red</label>
-                                <label><input type="checkbox" value="blue"> Blue</label>
-                                <label><input type="checkbox" value="green"> Green</label>
-                                <label><input type="checkbox" value="black"> Black</label>
-                                <label><input type="checkbox" value="white"> White</label>
-                            </div>
+
+                    <div class="custom-dropdown">
+                        <button class="dropdown-btn" id="color-btn">Select size</button>
+                        <div class="dropdown-content">
+                            <label><input type="checkbox" value="red"> 40</label>
+                            <label><input type="checkbox" value="blue"> 41</label>
+                            <label><input type="checkbox" value="green"> 42</label>
+                            <label><input type="checkbox" value="black"> 43</label>
+                            <label><input type="checkbox" value="white"> 44</label>
                         </div>
+                    </div>
+                    <div class="custom-dropdown">
+                        <button class="dropdown-btn" id="color-btn">Select Colors</button>
+                        <div class="dropdown-content">
+                            <label><input type="checkbox" value="red"> Red</label>
+                            <label><input type="checkbox" value="blue"> Blue</label>
+                            <label><input type="checkbox" value="green"> Green</label>
+                            <label><input type="checkbox" value="black"> Black</label>
+                            <label><input type="checkbox" value="white"> White</label>
+                        </div>
+                    </div>
+
+                    <div class="quantity">
+                        <input type="number" placeholder="quantity #1">
+                    </div>
+
+                    <div class="price">
+                        <h4>Total price</h4>
+                        <span>40$</span>
+                    </div>
+
+                    <div class="delete">
+                        <a href="#">
+                            <i class="bi bi-trash3"></i> delete
+                        </a>
                     </div>
                 </div>
             </div>
