add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -59,12 +59,12 @@
             </div>
 
             <div class="order-container">
-                <h3>Products ordered</h3>
+                <h2>Products ordered</h2>
                 <div class="order-prod">
                     <p><img src="asset/images/bg-1.jpg" alt=""></p>
 
                     <div class="custom-dropdown">
-                        <button class="dropdown-btn" id="color-btn">Select size</button>
+                        <button class="dropdown-btn" id="color-btn">Select sizes</button>
                         <div class="dropdown-content">
                             <label><input type="checkbox" value="red"> 40</label>
                             <label><input type="checkbox" value="blue"> 41</label>
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div class="custom-dropdown">
-                        <button class="dropdown-btn" id="color-btn">Select Colors</button>
+                        <button class="dropdown-btn" id="color-btn">Select colors</button>
                         <div class="dropdown-content">
                             <label><input type="checkbox" value="red"> Red</label>
                             <label><input type="checkbox" value="blue"> Blue</label>
@@ -85,7 +85,7 @@
                     </div>
 
                     <div class="quantity">
-                        <input type="number" placeholder="quantity #1">
+                        <input type="number" placeholder="Quantity #1">
                     </div>
 
                     <div class="price">
