--- a/panier.html
+++ b/panier.html
@@ -83,6 +83,103 @@
             </div>
         </div>
 
+
+        <div class="our-panier-prod">
+
+            <div class="order-prod">
+                <p><img src="asset/images/bg-1.jpg" alt=""></p>
+
+                <div class="custom-dropdown">
+                    <button class="dropdown-btn" id="color-btn">Select sizes</button>
+                    <div class="dropdown-content">
+                        <label><input type="checkbox" value="red"> 40</label>
+                        <label><input type="checkbox" value="blue"> 41</label>
+                        <label><input type="checkbox" value="green"> 42</label>
+                        <label><input type="checkbox" value="black"> 43</label>
+                        <label><input type="checkbox" value="white"> 44</label>
+                    </div>
+                </div>
+                <div class="custom-dropdown">
+                    <button class="dropdown-btn" id="color-btn">Select colors</button>
+                    <div class="dropdown-content">
+                        <label><input type="checkbox" value="red"> Red</label>
+                        <label><input type="checkbox" value="blue"> Blue</label>
+                        <label><input type="checkbox" value="green"> Green</label>
+                        <label><input type="checkbox" value="black"> Black</label>
+                        <label><input type="checkbox" value="white"> White</label>
+                    </div>
+                </div>
+
+                <div class="quantity">
+                    <input type="number" placeholder="Enter Quantity #1">
+                </div>
+
+                <div class="price">
+                    <h4>Total price</h4>
+                    <span>40$</span>
+                </div>
+
+                <div class="delete">
+                    <a href="#">
+                        <i class="bi bi-trash3"></i> delete
+                    </a>
+                </div>
+            </div>
+
+            <div class="our-buttons">
+                <button>Order now</button>
+                <button>Add to cart</button>
+            </div>
+        </div>
+
+        <div class="our-panier-prod">
+
+            <div class="order-prod">
+                <p><img src="asset/images/bg-1.jpg" alt=""></p>
+
+                <div class="custom-dropdown">
+                    <button class="dropdown-btn" id="color-btn">Select sizes</button>
+                    <div class="dropdown-content">
+                        <label><input type="checkbox" value="red"> 40</label>
+                        <label><input type="checkbox" value="blue"> 41</label>
+                        <label><input type="checkbox" value="green"> 42</label>
+                        <label><input type="checkbox" value="black"> 43</label>
+                        <label><input type="checkbox" value="white"> 44</label>
+                    </div>
+                </div>
+                <div class="custom-dropdown">
+                    <button class="dropdown-btn" id="color-btn">Select colors</button>
+                    <div class="dropdown-content">
+                        <label><input type="checkbox" value="red"> Red</label>
+                        <label><input type="checkbox" value="blue"> Blue</label>
+                        <label><input type="checkbox" value="green"> Green</label>
+                        <label><input type="checkbox" value="black"> Black</label>
+                        <label><input type="checkbox" value="white"> White</label>
+                    </div>
+                </div>
+
+                <div class="quantity">
+                    <input type="number" placeholder="Enter Quantity #1">
+                </div>
+
+                <div class="price">
+                    <h4>Total price</h4>
+                    <span>40$</span>
+                </div>
+
+                <div class="delete">
+                    <a href="#">
+                        <i class="bi bi-trash3"></i> delete
+                    </a>
+                </div>
+            </div>
+
+            <div class="our-buttons">
+                <button>Order now</button>
+                <button>Add to cart</button>
+            </div>
+        </div>
+
     </section>
 
 </body>
