--- a/panier.html
+++ b/panier.html
@@ -38,146 +38,53 @@
         <div class="our-panier-prod">
 
             <div class="order-prod">
-                <p><img src="asset/images/bg-1.jpg" alt=""></p>
-
-                <div class="custom-dropdown">
-                    <button class="dropdown-btn" id="color-btn">Select sizes</button>
-                    <div class="dropdown-content">
-                        <label><input type="checkbox" value="red"> 40</label>
-                        <label><input type="checkbox" value="blue"> 41</label>
-                        <label><input type="checkbox" value="green"> 42</label>
-                        <label><input type="checkbox" value="black"> 43</label>
-                        <label><input type="checkbox" value="white"> 44</label>
-                    </div>
+                <div>
+                    <p><img src="asset/images/bg-1.jpg" alt=""></p>
                 </div>
-                <div class="custom-dropdown">
-                    <button class="dropdown-btn" id="color-btn">Select colors</button>
-                    <div class="dropdown-content">
-                        <label><input type="checkbox" value="red"> Red</label>
-                        <label><input type="checkbox" value="blue"> Blue</label>
-                        <label><input type="checkbox" value="green"> Green</label>
-                        <label><input type="checkbox" value="black"> Black</label>
-                        <label><input type="checkbox" value="white"> White</label>
-                    </div>
-                </div>
+                <div>
+                    <div class="total-price">
+                        <div class="tot-price">
+                            <div>
+                                <h4>Product name</h4>
+                                <span>Jordan 1</span>
+                            </div>
 
-                <div class="quantity">
-                    <input type="number" placeholder="Enter Quantity #1">
-                </div>
+                            <div>
+                                <h4>Sizes selected</h4>
+                                <span>40, 42</span>
+                            </div>
 
-                <div class="price">
-                    <h4>Total price</h4>
-                    <span>40$</span>
-                </div>
+                            <div>
+                                <h4>Colors selected</h4>
+                                <span>Blue, Red</span>
+                            </div>
 
-                <div class="delete">
-                    <a href="#">
-                        <i class="bi bi-trash3"></i> delete
-                    </a>
-                </div>
-            </div>
+                            <div>
+                                <h4>Quantity selected</h4>
+                                <span>2</span>
+                            </div>
 
-            <div class="our-buttons">
-                <button>Order now</button>
-                <button>Add to cart</button>
-            </div>
-        </div>
+                            <div class="delete">
+                                <a href="#">
+                                    <i class="bi bi-trash3"></i> delete
+                                </a>
+                            </div>
+                        </div>
 
+                        <div class="price">
+                            <h4>Total price</h4>
+                            <span>40$</span>
+                        </div>
 
-        <div class="our-panier-prod">
-
-            <div class="order-prod">
-                <p><img src="asset/images/bg-1.jpg" alt=""></p>
-
-                <div class="custom-dropdown">
-                    <button class="dropdown-btn" id="color-btn">Select sizes</button>
-                    <div class="dropdown-content">
-                        <label><input type="checkbox" value="red"> 40</label>
-                        <label><input type="checkbox" value="blue"> 41</label>
-                        <label><input type="checkbox" value="green"> 42</label>
-                        <label><input type="checkbox" value="black"> 43</label>
-                        <label><input type="checkbox" value="white"> 44</label>
-                    </div>
-                </div>
-                <div class="custom-dropdown">
-                    <button class="dropdown-btn" id="color-btn">Select colors</button>
-                    <div class="dropdown-content">
-                        <label><input type="checkbox" value="red"> Red</label>
-                        <label><input type="checkbox" value="blue"> Blue</label>
-                        <label><input type="checkbox" value="green"> Green</label>
-                        <label><input type="checkbox" value="black"> Black</label>
-                        <label><input type="checkbox" value="white"> White</label>
                     </div>
                 </div>
 
-                <div class="quantity">
-                    <input type="number" placeholder="Enter Quantity #1">
-                </div>
-
-                <div class="price">
-                    <h4>Total price</h4>
-                    <span>40$</span>
-                </div>
-
-                <div class="delete">
-                    <a href="#">
-                        <i class="bi bi-trash3"></i> delete
-                    </a>
-                </div>
-            </div>
-
-            <div class="our-buttons">
-                <button>Order now</button>
-                <button>Add to cart</button>
             </div>
         </div>
 
-        <div class="our-panier-prod">
-
-            <div class="order-prod">
-                <p><img src="asset/images/bg-1.jpg" alt=""></p>
-
-                <div class="custom-dropdown">
-                    <button class="dropdown-btn" id="color-btn">Select sizes</button>
-                    <div class="dropdown-content">
-                        <label><input type="checkbox" value="red"> 40</label>
-                        <label><input type="checkbox" value="blue"> 41</label>
-                        <label><input type="checkbox" value="green"> 42</label>
-                        <label><input type="checkbox" value="black"> 43</label>
-                        <label><input type="checkbox" value="white"> 44</label>
-                    </div>
-                </div>
-                <div class="custom-dropdown">
-                    <button class="dropdown-btn" id="color-btn">Select colors</button>
-                    <div class="dropdown-content">
-                        <label><input type="checkbox" value="red"> Red</label>
-                        <label><input type="checkbox" value="blue"> Blue</label>
-                        <label><input type="checkbox" value="green"> Green</label>
-                        <label><input type="checkbox" value="black"> Black</label>
-                        <label><input type="checkbox" value="white"> White</label>
-                    </div>
-                </div>
-
-                <div class="quantity">
-                    <input type="number" placeholder="Enter Quantity #1">
-                </div>
-
-                <div class="price">
-                    <h4>Total price</h4>
-                    <span>40$</span>
-                </div>
-
-                <div class="delete">
-                    <a href="#">
-                        <i class="bi bi-trash3"></i> delete
-                    </a>
-                </div>
-            </div>
-
-            <div class="our-buttons">
-                <button>Order now</button>
-                <button>Add to cart</button>
-            </div>
+        <div class="our-buttons">
+            <button>Order now</button>
+            <button>Add to cart</button>
         </div>
 
     </section>
