add to my repository

--- a/panier.html
+++ b/panier.html
@@ -27,14 +27,108 @@
 
     <!-- Panier -->
     <section class="our-panier">
-        <div class="top-profil">
-            <span>Anicet chiza</span>
-            <div>
-                <p class="profil-pic"><img src="asset/images/profil.jpg" alt=""></p>
-                <div class="online"></div>
+
+
+        <div class="our-panier-prod">
+            <div class="order-prod">
+                <div>
+                    <p><img src="asset/images/bg-1.jpg" alt=""></p>
+                </div>
+                <div>
+                    <h4>Product name</h4>
+                    <span>Jordan 1</span>
+                </div>
+                <div>
+                    <h4>Sizes selected</h4>
+                    <span>40, 42</span>
+                </div>
+                <div>
+                    <h4>Colors selected</h4>
+                    <span>Blue, Red</span>
+                </div>
+                <div>
+                    <h4>Quantity selected</h4>
+                    <input type="number" placeholder="Qte #2">
+                </div>
+                <div class="delete">
+                    <a href="#">
+                        <i class="bi bi-trash3"></i> delete
+                    </a>
+                </div>
+            </div>
+
+            <div class="price">
+                <h4>Total price</h4>
+                <span>40$</span>
             </div>
         </div>
 
+        <div class="our-panier-prod">
+            <div class="order-prod">
+                <div>
+                    <p><img src="asset/images/bg-1.jpg" alt=""></p>
+                </div>
+                <div>
+                    <h4>Product name</h4>
+                    <span>Jordan 1</span>
+                </div>
+                <div>
+                    <h4>Sizes selected</h4>
+                    <span>40, 42</span>
+                </div>
+                <div>
+                    <h4>Colors selected</h4>
+                    <span>Blue, Red</span>
+                </div>
+                <div>
+                    <h4>Quantity selected</h4>
+                    <input type="number" placeholder="Qte #2">
+                </div>
+                <div class="delete">
+                    <a href="#">
+                        <i class="bi bi-trash3"></i> delete
+                    </a>
+                </div>
+            </div>
+
+            <div class="price">
+                <h4>Total price</h4>
+                <span>40$</span>
+            </div>
+        </div>
+        <div class="our-panier-prod">
+            <div class="order-prod">
+                <div>
+                    <p><img src="asset/images/bg-1.jpg" alt=""></p>
+                </div>
+                <div>
+                    <h4>Product name</h4>
+                    <span>Jordan 1</span>
+                </div>
+                <div>
+                    <h4>Sizes selected</h4>
+                    <span>40, 42</span>
+                </div>
+                <div>
+                    <h4>Colors selected</h4>
+                    <span>Blue, Red</span>
+                </div>
+                <div>
+                    <h4>Quantity selected</h4>
+                    <input type="number" placeholder="Qte #2">
+                </div>
+                <div class="delete">
+                    <a href="#">
+                        <i class="bi bi-trash3"></i> delete
+                    </a>
+                </div>
+            </div>
+
+            <div class="price">
+                <h4>Total price</h4>
+                <span>40$</span>
+            </div>
+        </div>
         <div class="our-panier-prod">
             <div class="order-prod">
                 <div>
