add to my repository

--- a/panier.html
+++ b/panier.html
@@ -25,6 +25,13 @@
 <body>
 
 
+    <!--Panier home page-->
+    <section style="height: 30vh;" class="pro-home">
+        <h3>#Cart</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit debitis quis alias vero tempore?</p>
+    </section>
+
+
     <!-- Panier -->
     <section class="our-panier">
 
