--- a/panier.html
+++ b/panier.html
@@ -24,9 +24,29 @@
 
 <body>
 
+    <!--Header part-->
+    <header>
+        <div class="header-content">
+            <div class="logo">
+                <p><img src="asset/images/logo.png" alt=""></p>
+            </div>
+            <div class="list">
+                <div class="list-details">
+                    <a class="home" href="index.html">Home</a>
+                    <a href="#">About us</a>
+                    <a href="#">Products</a>
+                    <a href="#">Contacts</a>
+                </div>
+                <div class="list-panier">
+                    <a class="panier" href="#"><i class="bi bi-cart"></i></a>
+                    <span>08</span>
+                </div>
+            </div>
+        </div>
+    </header>
 
     <!--Panier home page-->
-    <section style="height: 30vh;" class="pro-home">
+    <section class="pro-home">
         <h3>#Cart</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit debitis quis alias vero tempore?</p>
     </section>
