add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -49,50 +49,61 @@
             </div>
         </div>
 
-        <div class="right-side">
-            <div class="top-profil">
-                <span>Anicet chiza</span>
-                <div>
-                    <p class="profil-pic"><img src="asset/images/profil.jpg" alt=""></p>
-                    <div class="online"></div>
+        <div class="right-side" style="margin-bottom: 30px;">
+            <div class="our-panier-prod">
+                <div class="order-prod">
+                    <div>
+                        <p><img src="asset/images/bg-1.jpg" alt=""></p>
+                    </div>
+                    <div>
+                        <h4>Product name</h4>
+                        <span>Jordan 1</span>
+                    </div>
+                    <div>
+                        <h4>Sizes selected</h4>
+                        <span>40, 42</span>
+                    </div>
+                    <div>
+                        <h4>Colors selected</h4>
+                        <span>Blue, Red</span>
+                    </div>
+                    <div>
+                        <h4>Quantity selected</h4>
+                        <input type="number" placeholder="Qte #2">
+                    </div>
+                    <div class="delete">
+                        <a href="#">
+                            <i class="bi bi-trash3"></i> delete
+                        </a>
+                    </div>
+                </div>
+
+                <div class="price">
+                    <h4>Total price</h4>
+                    <span>40$</span>
                 </div>
             </div>
-
-            <div class="order-container">
-                <h2>Products ordered</h2>
+            <div class="our-panier-prod">
                 <div class="order-prod">
-                    <p><img src="asset/images/bg-1.jpg" alt=""></p>
-
-                    <div class="custom-dropdown">
-                        <button class="dropdown-btn" id="color-btn">Select sizes</button>
-                        <div class="dropdown-content">
-                            <label><input type="checkbox" value="red"> 40</label>
-                            <label><input type="checkbox" value="blue"> 41</label>
-                            <label><input type="checkbox" value="green"> 42</label>
-                            <label><input type="checkbox" value="black"> 43</label>
-                            <label><input type="checkbox" value="white"> 44</label>
-                        </div>
+                    <div>
+                        <p><img src="asset/images/bg-1.jpg" alt=""></p>
                     </div>
-                    <div class="custom-dropdown">
-                        <button class="dropdown-btn" id="color-btn">Select colors</button>
-                        <div class="dropdown-content">
-                            <label><input type="checkbox" value="red"> Red</label>
-                            <label><input type="checkbox" value="blue"> Blue</label>
-                            <label><input type="checkbox" value="green"> Green</label>
-                            <label><input type="checkbox" value="black"> Black</label>
-                            <label><input type="checkbox" value="white"> White</label>
-                        </div>
+                    <div>
+                        <h4>Product name</h4>
+                        <span>Jordan 1</span>
                     </div>
-
-                    <div class="quantity">
-                        <input type="number" placeholder="Quantity #1">
+                    <div>
+                        <h4>Sizes selected</h4>
+                        <span>40, 42</span>
                     </div>
-
-                    <div class="price">
-                        <h4>Total price</h4>
-                        <span>40$</span>
+                    <div>
+                        <h4>Colors selected</h4>
+                        <span>Blue, Red</span>
                     </div>
-
+                    <div>
+                        <h4>Quantity selected</h4>
+                        <input type="number" placeholder="Qte #2">
+                    </div>
                     <div class="delete">
                         <a href="#">
                             <i class="bi bi-trash3"></i> delete
@@ -100,39 +111,32 @@
                     </div>
                 </div>
 
+                <div class="price">
+                    <h4>Total price</h4>
+                    <span>40$</span>
+                </div>
+            </div>
+            <div class="our-panier-prod">
                 <div class="order-prod">
-                    <p><img src="asset/images/bg-1.jpg" alt=""></p>
-
-                    <div class="custom-dropdown">
-                        <button class="dropdown-btn" id="color-btn">Select sizes</button>
-                        <div class="dropdown-content">
-                            <label><input type="checkbox" value="red"> 40</label>
-                            <label><input type="checkbox" value="blue"> 41</label>
-                            <label><input type="checkbox" value="green"> 42</label>
-                            <label><input type="checkbox" value="black"> 43</label>
-                            <label><input type="checkbox" value="white"> 44</label>
-                        </div>
+                    <div>
+                        <p><img src="asset/images/bg-1.jpg" alt=""></p>
                     </div>
-                    <div class="custom-dropdown">
-                        <button class="dropdown-btn" id="color-btn">Select colors</button>
-                        <div class="dropdown-content">
-                            <label><input type="checkbox" value="red"> Red</label>
-                            <label><input type="checkbox" value="blue"> Blue</label>
-                            <label><input type="checkbox" value="green"> Green</label>
-                            <label><input type="checkbox" value="black"> Black</label>
-                            <label><input type="checkbox" value="white"> White</label>
-                        </div>
+                    <div>
+                        <h4>Product name</h4>
+                        <span>Jordan 1</span>
                     </div>
-
-                    <div class="quantity">
-                        <input type="number" placeholder="Quantity #1">
+                    <div>
+                        <h4>Sizes selected</h4>
+                        <span>40, 42</span>
                     </div>
-
-                    <div class="price">
-                        <h4>Total price</h4>
-                        <span>40$</span>
+                    <div>
+                        <h4>Colors selected</h4>
+                        <span>Blue, Red</span>
                     </div>
-
+                    <div>
+                        <h4>Quantity selected</h4>
+                        <input type="number" placeholder="Qte #2">
+                    </div>
                     <div class="delete">
                         <a href="#">
                             <i class="bi bi-trash3"></i> delete
@@ -140,39 +144,32 @@
                     </div>
                 </div>
 
+                <div class="price">
+                    <h4>Total price</h4>
+                    <span>40$</span>
+                </div>
+            </div>
+            <div class="our-panier-prod">
                 <div class="order-prod">
-                    <p><img src="asset/images/bg-1.jpg" alt=""></p>
-
-                    <div class="custom-dropdown">
-                        <button class="dropdown-btn" id="color-btn">Select sizes</button>
-                        <div class="dropdown-content">
-                            <label><input type="checkbox" value="red"> 40</label>
-                            <label><input type="checkbox" value="blue"> 41</label>
-                            <label><input type="checkbox" value="green"> 42</label>
-                            <label><input type="checkbox" value="black"> 43</label>
-                            <label><input type="checkbox" value="white"> 44</label>
-                        </div>
+                    <div>
+                        <p><img src="asset/images/bg-1.jpg" alt=""></p>
                     </div>
-                    <div class="custom-dropdown">
-                        <button class="dropdown-btn" id="color-btn">Select colors</button>
-                        <div class="dropdown-content">
-                            <label><input type="checkbox" value="red"> Red</label>
-                            <label><input type="checkbox" value="blue"> Blue</label>
-                            <label><input type="checkbox" value="green"> Green</label>
-                            <label><input type="checkbox" value="black"> Black</label>
-                            <label><input type="checkbox" value="white"> White</label>
-                        </div>
+                    <div>
+                        <h4>Product name</h4>
+                        <span>Jordan 1</span>
                     </div>
-
-                    <div class="quantity">
-                        <input type="number" placeholder="Quantity #1">
+                    <div>
+                        <h4>Sizes selected</h4>
+                        <span>40, 42</span>
                     </div>
-
-                    <div class="price">
-                        <h4>Total price</h4>
-                        <span>40$</span>
+                    <div>
+                        <h4>Colors selected</h4>
+                        <span>Blue, Red</span>
                     </div>
-
+                    <div>
+                        <h4>Quantity selected</h4>
+                        <input type="number" placeholder="Qte #2">
+                    </div>
                     <div class="delete">
                         <a href="#">
                             <i class="bi bi-trash3"></i> delete
@@ -180,7 +177,10 @@
                     </div>
                 </div>
 
-
+                <div class="price">
+                    <h4>Total price</h4>
+                    <span>40$</span>
+                </div>
             </div>
         </div>
     </section>
