add to my repository

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="home-text">
             <h1>Lorem ipsum dolor sit.</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio numquam, odit sapiente sit dolorem nisi minima repudiandae, consequatur expedita ipsa impedit nam dolor ratione atque fugiat quae perspiciatis neque reprehenderit.</p>
-            <a href="#">Get started</a>
+            <a href="login.html">Get started</a>
         </div>
 
         <div class="home-images">
