--- a/shoesdetails.html
+++ b/shoesdetails.html
@@ -42,14 +42,16 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo consequuntur architecto quam repudiandae? Sequi quia exercitationem atque animi iste eligendi tenetur sit aliquam quos autem placeat suscipit sed, obcaecati qui nam in? Aut nostrum
                 quae est, officiis exercitationem magni tenetur omnis atque consequatur vel?</p>
             <div class="cart">
-                <select name="" id="">
-                        <option value="">Size available</option>
-                        <option value="">40</option>
-                        <option value="">41</option>
-                        <option value="">42</option>
-                        <option value="">43</option>
-                        <option value="">44</option>
-                    </select>
+                <div class="custom-dropdown">
+                    <button class="dropdown-btn" id="color-btn">Select size</button>
+                    <div class="dropdown-content">
+                        <label><input type="checkbox" value="red"> 40</label>
+                        <label><input type="checkbox" value="blue"> 41</label>
+                        <label><input type="checkbox" value="green"> 42</label>
+                        <label><input type="checkbox" value="black"> 43</label>
+                        <label><input type="checkbox" value="white"> 44</label>
+                    </div>
+                </div>
                 <div class="custom-dropdown">
                     <button class="dropdown-btn" id="color-btn">Select Colors</button>
                     <div class="dropdown-content">
