add to my repository

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -37,6 +37,44 @@
         </div>
     </header>
 
+    <section class="admin-section">
+        <div class="first-bloc">
+            <nav>
+                <a href="#">
+                    <i class="bi bi-clipboard-pulse"></i>
+                    <span>Dashboard</span>
+                </a>
+                <a href="#">
+                    <i class="bi bi-bookmark-star"></i>
+                    <span>Categories</span>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-socks"></i>
+                    <span>Shoes</span>
+                </a>
+                <a href="#">
+                    <i class="bi bi-card-text"></i>
+                    <span>Newsletter</span>
+                </a>
+                <a href="#">
+                    <i class="bi bi-file-image"></i>
+                    <span>Slides</span>
+                </a>
+                <a href="#">
+                    <i class="bi bi-border"></i>
+                    <span>Orders</span>
+                </a>
+                <a href="#">
+                    <i class="bi bi-flower2"></i>
+                    <span>Shipment</span>
+                </a>
+            </nav>
+        </div>
+        <div class="second-bloc">
+
+        </div>
+    </section>
+
 </body>
 
 </html>
