add to my repository

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -40,7 +40,7 @@
     <section class="admin-section">
         <div class="first-bloc">
             <nav>
-                <a href="#">
+                <a class="activ" href="#">
                     <i class="bi bi-clipboard-pulse"></i>
                     <span>Dashboard</span>
                 </a>
