add to my repository

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -71,7 +71,33 @@
             </nav>
         </div>
         <div class="second-bloc">
-
+            <div class="all-items">
+                <div>
+                    <i class="bi bi-people"></i>
+                    <p>Users</p>
+                    <span>207</span>
+                </div>
+                <div>
+                    <i class="bi bi-bookmark-star"></i>
+                    <p>Categories</p>
+                    <span>123</span>
+                </div>
+                <div>
+                    <i class="fa-solid fa-socks"></i>
+                    <p>Shoes</p>
+                    <span>509</span>
+                </div>
+                <div>
+                    <i class="bi bi-border"></i>
+                    <p>Orders</p>
+                    <span>20</span>
+                </div>
+                <div>
+                    <i class="bi bi-flower2"></i>
+                    <p>Shipment</p>
+                    <span>184</span>
+                </div>
+            </div>
         </div>
     </section>
 
