add to my repository

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -72,7 +72,7 @@
         </div>
         <div class="second-bloc">
             <div class="all-items">
-                <div class="it">
+                <div class="bloc-content">
                     <div>
                         <i class="bi bi-people"></i>
                         <p>Users</p>
