add to my repository

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -84,7 +84,7 @@
                         <span>123</span>
                     </div>
                     <div>
-                        <i class="fa-solid fa-socks"></i>
+                        <i class="bi bi-people"></i>
                         <p>Shoes</p>
                         <span>509</span>
                     </div>
