add to my repository

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -37,7 +37,7 @@
         </div>
     </header>
 
-    <section style="height: 90vh;" class="admin-section">
+    <section class="admin-section">
         <div class="first-bloc">
             <nav>
                 <a class="activ" href="#">
