--- a/admin/admin.html
+++ b/admin/admin.html
@@ -52,7 +52,7 @@
                     <i class="fa-solid fa-socks"></i>
                     <span>Shoes</span>
                 </a>
-                <a href="#">
+                <a href="newsletter.html">
                     <i class="bi bi-card-text"></i>
                     <span>Newsletter</span>
                 </a>
