--- a/admin/newsletter.html
+++ b/admin/newsletter.html
@@ -39,7 +39,7 @@
     <section class="admin-section">
         <div class="first-bloc">
             <nav>
-                <a class="activ" href="#">
+                <a href="admin.html">
                     <i class="bi bi-clipboard-pulse"></i>
                     <span>Dashboard</span>
                 </a>
@@ -51,7 +51,7 @@
                     <i class="fa-solid fa-socks"></i>
                     <span>Shoes</span>
                 </a>
-                <a href="#">
+                <a class="activ" href="#">
                     <i class="bi bi-card-text"></i>
                     <span>Newsletter</span>
                 </a>
