add to my repository

--- a/admin/newsletter.html
+++ b/admin/newsletter.html
@@ -69,6 +69,23 @@
                 </a>
             </nav>
         </div>
+        <div class="second-bloc">
+            <div class="newsletter-form">
+                <form action="">
+                    <h3>Newsletter</h3>
+                    <div class="all-inputs">
+                        <input type="text" placeholder="Message title">
+                    </div>
+                    <div>
+                        <textarea name="" id="" placeholder="Message..."></textarea>
+                    </div>
+
+                    <div class="submit">
+                        <input type="submit" value="Send message">
+                    </div>
+                </form>
+            </div>
+        </div>
     </section>
 
 </body>
