add to my repository

--- a/admin/newsletter.html
+++ b/admin/newsletter.html
@@ -63,7 +63,7 @@
                     <i class="bi bi-border"></i>
                     <span>Orders</span>
                 </a>
-                <a href="#">
+                <a href="shipment.html">
                     <i class="bi bi-flower2"></i>
                     <span>Shipment</span>
                 </a>
