--- a/admin/shipment.html
+++ b/admin/shipment.html
@@ -25,6 +25,57 @@
 
 <body>
 
+    <!-- Admin header -->
+    <header class="header-admin">
+        <div>
+            <h2>Dashboard</h2>
+        </div>
+        <div class="admin-menu">
+            <i class="bi bi-list"></i>
+            <i class="bi bi-x"></i>
+        </div>
+    </header>
+
+    <section class="admin-section">
+        <div class="first-bloc">
+            <nav>
+                <a href="admin.html">
+                    <i class="bi bi-clipboard-pulse"></i>
+                    <span>Dashboard</span>
+                </a>
+                <a href="#">
+                    <i class="bi bi-bookmark-star"></i>
+                    <span>Categories</span>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-socks"></i>
+                    <span>Shoes</span>
+                </a>
+                <a href="newsletter.html">
+                    <i class="bi bi-card-text"></i>
+                    <span>Newsletter</span>
+                </a>
+                <a href="#">
+                    <i class="bi bi-file-image"></i>
+                    <span>Slides</span>
+                </a>
+                <a href="#">
+                    <i class="bi bi-border"></i>
+                    <span>Orders</span>
+                </a>
+                <a class="activ" href="#">
+                    <i class="bi bi-flower2"></i>
+                    <span>Shipment</span>
+                </a>
+            </nav>
+        </div>
+        <div class="second-bloc">
+            <div class="newsletter-form">
+
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
