add to my repository

--- a/admin/shipment.html
+++ b/admin/shipment.html
@@ -70,8 +70,31 @@
             </nav>
         </div>
         <div class="second-bloc">
-            <div class="newsletter-form">
-
+            <div class="shipment">
+                <div>
+                    <h4>User names</h4>
+                    <span>Gloire NDAYISABA</span>
+                </div>
+                <div>
+                    <h4>Country</h4>
+                    <span>Rwanda</span>
+                </div>
+                <div>
+                    <h4>Adress</h4>
+                    <span>Kigali, Gisozi</span>
+                </div>
+                <div>
+                    <h4>Adress</h4>
+                    <span>Kigali, Gisozi</span>
+                </div>
+                <div>
+                    <h4>Whatsapp</h4>
+                    <span>Kigali, Gisozi</span>
+                </div>
+                <div>
+                    <h4>Products</h4>
+                    <span>Airforce, Jordan, Samba</span>
+                </div>
             </div>
         </div>
     </section>
