add to my repository

--- a/admin/shipment.html
+++ b/admin/shipment.html
@@ -89,11 +89,15 @@
                 </div>
                 <div>
                     <h4>Whatsapp</h4>
-                    <span>Kigali, Gisozi</span>
+                    <span>+250 123456789</span>
                 </div>
                 <div>
                     <h4>Products</h4>
                     <span>Airforce, Jordan, Samba</span>
+                </div>
+                <div>
+                    <h4>Getway payment</h4>
+                    <span>Paypal</span>
                 </div>
             </div>
         </div>
