add to my repository

--- a/admin/shipment.html
+++ b/admin/shipment.html
@@ -71,33 +71,35 @@
         </div>
         <div class="second-bloc">
             <div class="shipment">
-                <div>
-                    <h4>User names</h4>
-                    <span>Gloire NDAYISABA</span>
-                </div>
-                <div>
-                    <h4>Country</h4>
-                    <span>Rwanda</span>
-                </div>
-                <div>
-                    <h4>Adress</h4>
-                    <span>Kigali, Gisozi</span>
-                </div>
-                <div>
-                    <h4>Adress</h4>
-                    <span>Kigali, Gisozi</span>
-                </div>
-                <div>
-                    <h4>Whatsapp</h4>
-                    <span>+250 123456789</span>
-                </div>
-                <div>
-                    <h4>Products</h4>
-                    <span>Airforce, Jordan, Samba</span>
-                </div>
-                <div>
-                    <h4>Getway payment</h4>
-                    <span>Paypal</span>
+                <div class="shipment-details">
+                    <div>
+                        <h4>User names</h4>
+                        <span>Gloire NDAYISABA</span>
+                    </div>
+                    <div>
+                        <h4>Country</h4>
+                        <span>Rwanda</span>
+                    </div>
+                    <div>
+                        <h4>Adress</h4>
+                        <span>Kigali, Gisozi</span>
+                    </div>
+                    <div>
+                        <h4>Adress</h4>
+                        <span>Kigali, Gisozi</span>
+                    </div>
+                    <div>
+                        <h4>Whatsapp</h4>
+                        <span>+250 123456789</span>
+                    </div>
+                    <div>
+                        <h4>Products</h4>
+                        <span>Airforce, Jordan, Samba</span>
+                    </div>
+                    <div>
+                        <h4>Getway payment</h4>
+                        <span>Paypal</span>
+                    </div>
                 </div>
             </div>
         </div>
