add to my repository

--- a/admin/shipment.html
+++ b/admin/shipment.html
@@ -71,6 +71,9 @@
         </div>
         <div class="second-bloc">
             <div class="shipment">
+                <div class="date">
+                    <span>August 20, 2024</span>
+                </div>
                 <div class="shipment-details">
                     <div>
                         <h4>User names</h4>
