--- a/admin/shipment.html
+++ b/admin/shipment.html
@@ -88,8 +88,8 @@
                         <span>Kigali, Gisozi</span>
                     </div>
                     <div>
-                        <h4>Adress</h4>
-                        <span>Kigali, Gisozi</span>
+                        <h4>Quantity</h4>
+                        <span>4 products</span>
                     </div>
                     <div>
                         <h4>Whatsapp</h4>
@@ -102,6 +102,26 @@
                     <div>
                         <h4>Getway payment</h4>
                         <span>Paypal</span>
+                    </div>
+                    <div>
+                        <h4>Total price</h4>
+                        <span>230$</span>
+                    </div>
+                    <div>
+                        <h4>Country</h4>
+                        <span>Rwanda</span>
+                    </div>
+                    <div>
+                        <h4>Adress</h4>
+                        <span>Kigali, Gisozi</span>
+                    </div>
+                    <div>
+                        <h4>Whatsapp</h4>
+                        <span>+250 123456789</span>
+                    </div>
+                    <div>
+                        <h4>Products</h4>
+                        <span>Airforce, Jordan, Samba</span>
                     </div>
                 </div>
             </div>
